--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,20 @@
 {
     "presets": [
-        "react", "es2015"
+        "@babel/preset-env",
+        "@babel/preset-react"
     ],
     "plugins": [
-        "transform-decorators-legacy",
-        "transform-class-properties"
+        [
+            "@babel/plugin-proposal-decorators",
+            {
+                "legacy": true
+            }
+        ],
+        [
+            "@babel/plugin-proposal-class-properties",
+            {
+                "loose": true
+            }
+        ]
     ]
 }
